[package]
name = "tic"
version = "0.1.12-pre"
authors = ["Brian Martin <brayniac@gmail.com>"]

license = "MIT OR Apache-2.0"

description = "a high-performance stats library focused on rates and latencies from timestamped events"

homepage = "https://github.com/brayniac/tic"
documentation = "https://docs.rs/tic"
repository = "https://github.com/brayniac/tic"

readme = "README.md"

keywords = [ "stats", "metrics", "telemetry", "interval" ]

exclude = [ "scripts" ]

[dependencies]
allan = "0.2.1"
bytes = "0.3.0"
clocksource = "0.2.0"
getopts = "0.2.14"
heatmap = "0.6.4"
histogram = "0.6.4"
log = "0.3.6"
mpmc = "0.1.2"
rand = "0.3.15"
shuteye = "0.2.0"
tiny_http = "0.5.8"
time = "0.1.36"
waterfall = "0.6.6"

[features]
asm = [ "clocksource/asm" ]
default = []
