[package]
name = "benches"
version = "0.1.0"
authors = ["Brian Martin <brayniac@gmail.com>"]

[dependencies]
time = "*"
log = "*"
getopts = "*"
canal = "*"
mpmc = "*"
shuteye = "*"
pad = "*"
rand = "*"

[dependencies.tic]
path = "../"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[features]
asm = [ "tic/asm" ]
default = []
